Initial index.html structure added.
1. Set up basic HTML structure with header and container for chessboard.
2. Added index.html with Metal Lord font and container setup.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chessboard</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/metal-lord" type="text/css"/>
+</head>
+<body>
 
+    <h1 id="title">Chessboard</h1>
+
+    <div id="container">
+        <!-- Chessboard rows and cells will go here -->
+    </div>
+
+</body>
+</html>
