Added Chess Pieces to index.html
Added chess piece images to the board.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <h1 id="title">Chessboard</h1>
 
     <div id="container">
-        <!-- Chessboard rows and cells will go here -->
+        <div class="row">
+            <div class="white"><img src="images/black-king.png" alt="Black King"></div>
+            <div class="black"><img src="images/white-queen.png" alt="White Queen"></div>
+            <div class="white"><img src="images/black-bishop.png" alt="Black Bishop"></div>
+            <div class="black"><img src="images/white-knight.png" alt="White Knight"></div>
+            <!-- Add other chess pieces similarly -->
+        </div>
     </div>
 
 </body>
