--- a/index.html
+++ b/index.html
@@ -5,20 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chessboard</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/metal-lord" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/metal-lord" type="text/css"/>
 </head>
 <body>
 
     <h1 id="title">Chessboard</h1>
 
     <div id="container">
+        <!-- Row 1: Black Pieces -->
         <div class="row">
-            <div class="white"><img src="images/black-king.png" alt="Black King"></div>
-            <div class="black"><img src="images/white-queen.png" alt="White Queen"></div>
+            <div class="white"><img src="images/black-rook.png" alt="Black Rook"></div>
+            <div class="black"><img src="images/black-knight.png" alt="Black Knight"></div>
             <div class="white"><img src="images/black-bishop.png" alt="Black Bishop"></div>
-            <div class="black"><img src="images/white-knight.png" alt="White Knight"></div>
-            <!-- Add other chess pieces similarly -->
+            <div class="black"><img src="images/black-queen.png" alt="Black Queen"></div>
+            <div class="white"><img src="images/black-king.png" alt="Black King"></div>
+            <div class="black"><img src="images/black-bishop.png" alt="Black Bishop"></div>
+            <div class="white"><img src="images/black-knight.png" alt="Black Knight"></div>
+            <div class="black"><img src="images/black-rook.png" alt="Black Rook"></div>
         </div>
+
+        <!-- Row 2: Black Pawns -->
+        <div class="row">
+            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+        </div>
+
+        <!-- Rows 3-6: Empty Spaces -->
+        <div class="row">
+            <div class="white"></div>
+            <div class="black"></div>
+            <div class="white"></div>
+            <div class="black"></div>
+            <div class="white"></div>
+            <div class="black"></div>
+            <div class="white"></div>
+            <div class="black"></div>
+        </div>
+
+
+        <!-- Row 7: White Pawns -->
+        <div class="row">
+            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
+        </div>
+
+        <!-- Row 8: White Pieces -->
+        <div class="row">
+            <div class="black"><img src="images/white-rook.png" alt="White Rook"></div>
+            <div class="white"><img src="images/white-knight.png" alt="White Knight"></div>
+            <div class="black"><img src="images/white-bishop.png" alt="White Bishop"></div>
+            <div class="white"><img src="images/white-queen.png" alt="White Queen"></div>
+            <div class="black"><img src="images/white-king.png" alt="White King"></div>
+            <div class="white"><img src="images/white-bishop.png" alt="White Bishop"></div>
+            <div class="black"><img src="images/white-knight.png" alt="White Knight"></div>
+            <div class="white"><img src="images/white-rook.png" alt="White Rook"></div>
+        </div>
+
     </div>
 
 </body>
