Updated Chess Structure index.html
Updated HTML with correct chess piece structure and paths

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     <div id="container">
         <!-- Row 1: Black Pieces -->
         <div class="row">
-            <div class="white"><img src="images/black-rook.png" alt="Black Rook"></div>
-            <div class="black"><img src="images/black-knight.png" alt="Black Knight"></div>
-            <div class="white"><img src="images/black-bishop.png" alt="Black Bishop"></div>
-            <div class="black"><img src="images/black-queen.png" alt="Black Queen"></div>
-            <div class="white"><img src="images/black-king.png" alt="Black King"></div>
-            <div class="black"><img src="images/black-bishop.png" alt="Black Bishop"></div>
-            <div class="white"><img src="images/black-knight.png" alt="Black Knight"></div>
-            <div class="black"><img src="images/black-rook.png" alt="Black Rook"></div>
+            <div class="white"><img src="chess_icons-1/black-rook.png" alt="Black Rook"></div>
+            <div class="black"><img src="chess_icons-1/black-knight.png" alt="Black Knight"></div>
+            <div class="white"><img src="chess_icons-1/black-bishop.png" alt="Black Bishop"></div>
+            <div class="black"><img src="chess_icons-1/black-queen.png" alt="Black Queen"></div>
+            <div class="white"><img src="chess_icons-1/black-king.png" alt="Black King"></div>
+            <div class="black"><img src="chess_icons-1/black-bishop.png" alt="Black Bishop"></div>
+            <div class="white"><img src="chess_icons-1/black-knight.png" alt="Black Knight"></div>
+            <div class="black"><img src="chess_icons-1/black-rook.png" alt="Black Rook"></div>
         </div>
 
         <!-- Row 2: Black Pawns -->
         <div class="row">
-            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
-            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
-            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
-            <div class="black"><img src="images/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
         </div>
 
         <!-- Rows 3-6: Empty Spaces -->
@@ -48,29 +48,30 @@
             <div class="black"></div>
         </div>
 
+        <!-- Repeat empty rows for chessboard -->
 
         <!-- Row 7: White Pawns -->
         <div class="row">
-            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
-            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
-            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
-            <div class="white"><img src="images/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="images/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
         </div>
 
         <!-- Row 8: White Pieces -->
         <div class="row">
-            <div class="black"><img src="images/white-rook.png" alt="White Rook"></div>
-            <div class="white"><img src="images/white-knight.png" alt="White Knight"></div>
-            <div class="black"><img src="images/white-bishop.png" alt="White Bishop"></div>
-            <div class="white"><img src="images/white-queen.png" alt="White Queen"></div>
-            <div class="black"><img src="images/white-king.png" alt="White King"></div>
-            <div class="white"><img src="images/white-bishop.png" alt="White Bishop"></div>
-            <div class="black"><img src="images/white-knight.png" alt="White Knight"></div>
-            <div class="white"><img src="images/white-rook.png" alt="White Rook"></div>
+            <div class="black"><img src="chess_icons-1/white-rook.png" alt="White Rook"></div>
+            <div class="white"><img src="chess_icons-1/white-knight.png" alt="White Knight"></div>
+            <div class="black"><img src="chess_icons-1/white-bishop.png" alt="White Bishop"></div>
+            <div class="white"><img src="chess_icons-1/white-queen.png" alt="White Queen"></div>
+            <div class="black"><img src="chess_icons-1/white-king.png" alt="White King"></div>
+            <div class="white"><img src="chess_icons-1/white-bishop.png" alt="White Bishop"></div>
+            <div class="black"><img src="chess_icons-1/white-knight.png" alt="White Knight"></div>
+            <div class="white"><img src="chess_icons-1/white-rook.png" alt="White Rook"></div>
         </div>
 
     </div>
