--- a/index.html
+++ b/index.html
@@ -5,73 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chessboard</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/metal-lord" type="text/css"/>
+
+    <!--Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
     <h1 id="title">Chessboard</h1>
 
     <div id="container">
+        <!-- Chessboard content goes here -->
+    </div>
+
+</body>
+</html>
+
+    <div id="container">
         <!-- Row 1: Black Pieces -->
         <div class="row">
-            <div class="white"><img src="chess_icons-1/black-rook.png" alt="Black Rook"></div>
-            <div class="black"><img src="chess_icons-1/black-knight.png" alt="Black Knight"></div>
-            <div class="white"><img src="chess_icons-1/black-bishop.png" alt="Black Bishop"></div>
-            <div class="black"><img src="chess_icons-1/black-queen.png" alt="Black Queen"></div>
-            <div class="white"><img src="chess_icons-1/black-king.png" alt="Black King"></div>
-            <div class="black"><img src="chess_icons-1/black-bishop.png" alt="Black Bishop"></div>
-            <div class="white"><img src="chess_icons-1/black-knight.png" alt="Black Knight"></div>
-            <div class="black"><img src="chess_icons-1/black-rook.png" alt="Black Rook"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-castle.png" alt="Black Rook"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-knight.png" alt="Black Knight"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-bishop.png" alt="Black Bishop"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-queen.png" alt="Black Queen"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-king.png" alt="Black King"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-bishop.png" alt="Black Bishop"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-knight.png" alt="Black Knight"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-castle.png" alt="Black Rook"></div>
         </div>
 
         <!-- Row 2: Black Pawns -->
         <div class="row">
-            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
-            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
-            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
-            <div class="black"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
-            <div class="white"><img src="chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-pawn.png" alt="Black Pawn"></div>
         </div>
 
-        <!-- Rows 3-6: Empty Spaces -->
+        <!-- Empty Rows -->
         <div class="row">
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
+            <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+            <div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
         </div>
 
-        <!-- Repeat empty rows for chessboard -->
+        <div class="row">
+            <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+            <div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+        </div>
 
         <!-- Row 7: White Pawns -->
         <div class="row">
-            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
-            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
-            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
-            <div class="white"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
-            <div class="black"><img src="chess_icons-1/white-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
         </div>
 
         <!-- Row 8: White Pieces -->
         <div class="row">
-            <div class="black"><img src="chess_icons-1/white-rook.png" alt="White Rook"></div>
-            <div class="white"><img src="chess_icons-1/white-knight.png" alt="White Knight"></div>
-            <div class="black"><img src="chess_icons-1/white-bishop.png" alt="White Bishop"></div>
-            <div class="white"><img src="chess_icons-1/white-queen.png" alt="White Queen"></div>
-            <div class="black"><img src="chess_icons-1/white-king.png" alt="White King"></div>
-            <div class="white"><img src="chess_icons-1/white-bishop.png" alt="White Bishop"></div>
-            <div class="black"><img src="chess_icons-1/white-knight.png" alt="White Knight"></div>
-            <div class="white"><img src="chess_icons-1/white-rook.png" alt="White Rook"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-castle.png" alt="White Rook"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-knight.png" alt="White Knight"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-bishop.png" alt="White Bishop"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-queen.png" alt="White Queen"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-king.png" alt="White King"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-bishop.png" alt="White Bishop"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-knight.png" alt="White Knight"></div>
+            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-castle.png" alt="White Rook"></div>
         </div>
 
     </div>
