--- a/index.html
+++ b/index.html
@@ -5,23 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chessboard</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
     <!--Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
-
 </head>
 <body>
-
-    <h1 id="title">Chessboard</h1>
-
-    <div id="container">
-        <!-- Chessboard content goes here -->
-    </div>
-
-</body>
-</html>
-
-    <div id="container">
+    <h1 id="title">Chessboard</h1> 
+    <div id="container"> 
         <!-- Row 1: Black Pieces -->
         <div class="row">
             <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-castle.png" alt="Black Rook"></div>
@@ -33,6 +22,7 @@
             <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-knight.png" alt="Black Knight"></div>
             <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/black-castle.png" alt="Black Rook"></div>
         </div>
+      
 
         <!-- Row 2: Black Pawns -->
         <div class="row">
@@ -68,11 +58,11 @@
             <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
             <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-pawn.png" alt="White Pawn"></div>
         </div>
-
-        <!-- Row 8: White Pieces -->
+<!-- Row 8: White Pieces -->
         <div class="row">
-            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-castle.png" alt="White Rook"></div>
-            <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-knight.png" alt="White Knight"></div>
+            <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-castle.png" alt="White Rook">
+          </div>
+           <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-knight.png" alt="White Knight"></div>
             <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-bishop.png" alt="White Bishop"></div>
             <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-queen.png" alt="White Queen"></div>
             <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-king.png" alt="White King"></div>
@@ -80,8 +70,15 @@
             <div class="black"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-knight.png" alt="White Knight"></div>
             <div class="white"><img src="https://raw.githubusercontent.com/luckyykat/a2/main/chess_icons-1/gold-castle.png" alt="White Rook"></div>
         </div>
+ </div>
+<div id="footer">
+ <a href="http://validator.w3.org/check?uri=referer" target="_blank">
+    <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" />
+    </a>
+  <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+  <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!">
+    </a></div>
+</body> 
+</html>
 
-    </div>
-
-</body>
 </html>
